# NovelOS

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Novel OS.md  __main__.py  novel.yaml  pyproject.toml  requirements.txt  使用指南.md
.claude-plugin/: plugin.json
.claude-plugin/skills/novelos-context/: SKILL.md
.claude-plugin/skills/novelos-init/: SKILL.md
.claude-plugin/skills/novelos-plan/: SKILL.md
.claude-plugin/skills/novelos-review/: SKILL.md
.claude-plugin/skills/novelos-revise/: SKILL.md
.claude-plugin/skills/novelos-write/: SKILL.md
.claude/scripts/: extract_chapter_context.py
.novelos/: vectors.db
app/: cli.py  workflow.py
app/adapters/: __init__.py  base_adapter.py
app/core/: __init__.py  api_client.py  config.py  context_manager.py  context_ranker.py  entity_linker.py  index_chapter_mixin.py  index_entity_mixin.py  index_manager.py  query_router.py  rag_adapter.py  schemas.py  sql_state_manager.py  state_validator.py  style_sampler.py  writing_guidance.py
app/models/: __init__.py  chapter.py  review.py  story_bible.py  task.py
app/services/: __init__.py  bible_service.py  bible_update_service.py  coherence_service.py  context_service.py  extraction_service.py  file_service.py  outline_service.py  rag_service.py  review_service.py  revision_service.py  task_service.py
app/utils/: __init__.py  markdown_utils.py  path_utils.py  text_utils.py  yaml_utils.py
docs/: architecture.md
project/outlines/: book_outline.md
project/story_bible/: bible.yaml
test_novel/: novel.yaml
tests/: test_coherence.py  test_core.py  test_new_core.py  test_rag.py  test_services.py
webnovel-writer/scripts/: novelos_apply.py  novelos_context.py  novelos_extract.py  novelos_generate.py  novelos_init.py  novelos_merge_reviews.py  novelos_plan.py  novelos_review.py  novelos_revise.py  novelos_summarize.py  novelos_task.py
(+65 files in other folders)
